FIxed up the course scrollbar

--- a/OSDUAcademy/ClientApp/src/custom.css
+++ b/OSDUAcademy/ClientApp/src/custom.css
@@ -120,14 +120,60 @@ code {
     margin: 0;
 }
 
+.course-scroll-bar {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    margin-top: 32px;
+    justify-content: center;
+}
+
 .course-scroll-button {
     width: 48px;
     height: 48px;
-    border-radius: 100%;
+    border-radius: 3px;
     
     text-align: center;
+
     background-color: #2c5385;
     border: solid #101c2c 1px;
     color: white;
 }
 
+.course-scroll-button:hover {
+    cursor: pointer;
+}
+
+.course-scroll-button i {
+    justify-content: center;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 0;
+    position: relative;
+}
+
+.course-scroll-dot-container {
+    display: flex;
+    flex-wrap: nowrap;
+    height: 48px;
+    justify-content: center;
+}
+
+.course-scroll-dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    border: solid 1px #2c5385;
+    display: block;
+
+    top: 50%;
+    transform: translateY(-50%);
+    position: relative;
+
+    margin-right: 16px;
+}
+
+.course-scroll-dot:first-child {
+    margin-left: 16px;
+    background-color: #2c5385;
+}
